before adding auth

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,8 @@
     <script src="js/controllers/obCtrl.js"></script>
     <script src="js/services/salesService.js"></script>
     <script src="js/controllers/createSoCtrl.js"></script>
+    <script src="js/directives/createSo.js"></script>
+    <script src="js/controllers/loginCtrl.js"></script>
   </head>
   <body>
 
