Local Auth now working

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/controllers/createSoCtrl.js"></script>
     <script src="js/directives/createSo.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/services/loginSvc.js"></script>
   </head>
   <body>
 
