added display history function and history table

--- a/www/index.html
+++ b/www/index.html
@@ -23,11 +23,13 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/salesCtrl.js"></script>
     <script src="js/controllers/obCtrl.js"></script>
+    <script src="js/controllers/purchaseCtrl.js"></script>
     <script src="js/services/salesService.js"></script>
     <script src="js/controllers/createSoCtrl.js"></script>
     <script src="js/directives/createSo.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/services/loginSvc.js"></script>
+    <script src="js/services/purchaseSvc.js"></script>
   </head>
   <body>
 
