added customer views

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,9 @@
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/services/loginSvc.js"></script>
     <script src="js/services/purchaseSvc.js"></script>
+    <script src="js/controllers/customerCtrl.js"></script>
+
+
   </head>
   <body>
 
